--- a/src/MonbonHLM/HomeBundle/Resources/views/Message/messageauteur.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Message/messageauteur.html.twig
@@ -167,9 +167,10 @@
                                                 <div>Nom : <span>{{ user.nom }}</span></div>
                                                 <div>Prénom : <span>{{ user.prenom }}</span></div>
                                                 <div>Téléphone : <span>{{ user.telephone }}</span></div>
+                                                </br>
+                                                <div><a href="http://localhost:8888/MonbonHLM/web/app_dev.php/annonce-{{ userann }}" style="color: #ffffff; border-color: #ffffff; border-width: 2px; border-style: solid; text-decoration: none; padding-left: 10px; padding-right: 10px; padding-top: 8px; padding-bottom: 8px; border-radius: 4px; font-family: Helvetica,Arial,sans-serif; font-size: 14px; font-weight: 600; line-height: 20px;text-align: center;">Voir son annonce</a></div>
                                             </td>
                                             <td width="10" class="noDesktop">&nbsp;</td>
-                                            <a href="http://localhost:8888/MonbonHLM/web/app_dev.php/annonce-{{ userann }}" style="color: #ffffff; border-color: #ffffff; border-width: 2px; border-style: solid; text-decoration: none; padding-left: 10px; padding-right: 10px; padding-top: 8px; padding-bottom: 8px; border-radius: 4px; font-family: Helvetica,Arial,sans-serif; font-size: 14px; font-weight: 600; line-height: 20px;text-align: center;">Voir son annonce</a>
                                         </tr>
                                     </table>
                                 </td>
@@ -189,37 +190,6 @@
                 </tr>
             </table>
             <!-- ========= END FULL CENTERED FEATURE ========= -->
-
-
-
-
-            <!-- ========= BRAND ========= -->
-            <table class="containerWide" bgcolor="edf7f9" border="0" align="center" cellpadding="0" cellspacing="0" width="100%" style="background-color: #edf7f9; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"  >
-
-                <tr>
-                    <td>
-                        <!-- Box -->
-                        <table class="containerBox" border="0" align="center" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-
-                            <!-- Space -->
-                            <tr><td height="10">&nbsp;</td></tr>
-
-                            <tr>
-                                <td align="center">
-                                    <img height="" class="icon" src="http://themes.lioncodestudio.com/ui/img/logo_lion_code_studio_transparent.png" alt="Brand" width="64" border="0" style="width: 64px !important; border-style: none; display: block;"   />
-                                </td>
-                            </tr>
-
-                            <!-- Space -->
-                            <tr><td height="10">&nbsp;</td></tr>
-
-                        </table>
-                    </td>
-                </tr>
-            </table>
-            <!-- ========= END BRAND ========= -->
-
-
 
 
             <!-- ========= SUB FOOTER ========= -->
